--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="bob.js"></script>
       <script src="Ground.js"></script>
       <script src="rope.js"></script>
-
+      <script src="Roof.js"></script>
     </head>
     <body>
     </body>
